deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barbearia-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: barbearia-pod
  template:
    metadata: 
      labels:
        name: barbearia-pod
    spec:
      containers:
      - name: barbearia-pod
        image: aluracursos/sistema-noticias:1
        resources:
          requests:
            cpu: 100m
        ports:
          - containerPort: 80
