statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: barbearia-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barbearia-db
  serviceName: barbearia-service
  template:
    metadata:
      labels:
        app: barbearia-db
      name: barbearia-db
    spec:
      containers:
        - name: barbearia-db-pod
          image: aluracursos/mysql-db:1
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db
              mountPath: /var/lib/mysql
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: barbearia-pvc
