test-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-hpa
  labels:
    app: test-hpa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-hpa
  template:
    metadata:
      name: test-hpa
      labels:
        app: test-hpa
    spec:
      containers:
      - name: test-hpa
        image: busybox
        command:
        - /bin/sh
        - -c
        - "while true; do wget -q -O- http://10.245.133.229; done"
