clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: barbearia-service
spec:
  type: ClusterIP
  selector:
    app: barbearia-db
  ports:
    - port: 3306
