loadBalancer.yml
apiVersion: v1
kind: Service
metadata: 
  name: barbearia-loadbalancer
spec: 
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: barbearia-pod
