barbearia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barbearia-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - barbearia.atoum.com.br
    secretName: barbearia-tls
  rules:
    - host: barbearia.atoum.com.br
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: barbearia-app-service
                port:
                  number: 80
